updated global css, fixed logo on smaller widths

--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .bar {
     width: 100vw;
-    height: 15vh;
+    height: 20vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -17,7 +17,8 @@
 }
 
 .links p {
-    font-size: .5rem;
+    font-size: 1rem;
+    margin: 5px;
 }
 
 .logo {
@@ -25,28 +26,27 @@
     justify-content: flex-start;
     align-items: center;
     position: relative;
-    width: 25%;
+    width: 40%;
     height: 100%;
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 414px) {
     .logo {
-        width: 30%;
-        height: 100%;
+        width: 40%;
+        height: 80%;
     }
 }
 
 @media screen and (max-width: 375px) {
     .logo {
-        width: 30%;
-        height: 100%;
+        width: 40%;
+        height: 75%;
     }
 }
 
-
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 359px) {
     .logo {
-        width: 22.5%;
+        width: 30%;
         height: 100%;
     }
 }
